Resolved the same output issue